[gd_scene load_steps=2 format=1]

[ext_resource path="res://HP.gd" type="Script" id=1]

[node name="HUD" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Enemy" type="Node2D" parent="."]

editor/display_folded = true

[node name="EnemyInfo" type="Panel" parent="Enemy"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 703.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 126.0

[node name="EnemyHP" type="Label" parent="Enemy"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 713.0
margin/top = 11.0
margin/right = 782.0
margin/bottom = 28.0
text = "HP:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EnemyHPValue" type="Label" parent="Enemy"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 790.0
margin/top = 12.0
margin/right = 881.0
margin/bottom = 40.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EnemyInfoText1" type="Label" parent="Enemy"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 711.0
margin/top = 62.0
margin/right = 780.0
margin/bottom = 79.0
text = "Type:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EnemyInfoText2" type="Label" parent="Enemy"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 821.0
margin/top = 64.0
margin/right = 912.0
margin/bottom = 92.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player" type="Node2D" parent="."]

[node name="HPInfo" type="Panel" parent="Player"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 506.0
margin/right = 175.0
margin/bottom = 600.0

[node name="HP" type="Label" parent="Player"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 525.0
margin/right = 33.0
margin/bottom = 542.0
text = "HP:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HPValue" type="Label" parent="Player"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 526.0
margin/right = 171.0
margin/bottom = 554.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonC" type="Panel" parent="Player"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 702.0
margin/top = 413.0
margin/right = 1022.0
margin/bottom = 601.0

[node name="Move" type="Button" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 725.0
margin/top = 438.0
margin/right = 850.0
margin/bottom = 496.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Move"
flat = false

[node name="Pass" type="Button" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 876.0
margin/top = 522.0
margin/right = 1001.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Pass"
flat = false

[node name="Orbs" type="Button" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 723.0
margin/top = 522.0
margin/right = 848.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Orbs"
flat = false

[node name="Attack" type="Button" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 876.0
margin/top = 438.0
margin/right = 1001.0
margin/bottom = 496.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack"
flat = false

[node name="Orbs" type="Node2D" parent="."]

[node name="Spell1" type="Node2D" parent="Orbs"]

editor/display_folded = true

[node name="SpellC1" type="Panel" parent="Orbs/Spell1"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 555.0
margin/top = 413.0
margin/right = 702.0
margin/bottom = 601.0

[node name="Spell1" type="Button" parent="Orbs/Spell1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 567.0
margin/top = 522.0
margin/right = 692.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Spell1"
flat = false

[node name="Spell1T" type="Label" parent="Orbs/Spell1"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 614.0
margin/top = 466.0
margin/right = 672.0
margin/bottom = 500.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spell2" type="Node2D" parent="Orbs"]

editor/display_folded = true

[node name="SpellC2" type="Panel" parent="Orbs/Spell2"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 408.0
margin/top = 413.0
margin/right = 555.0
margin/bottom = 600.0

[node name="Spell2" type="Button" parent="Orbs/Spell2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 420.0
margin/top = 522.0
margin/right = 545.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Spell2"
flat = false

[node name="Spell2T" type="Label" parent="Orbs/Spell2"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 468.0
margin/top = 466.0
margin/right = 486.0
margin/bottom = 486.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spell3" type="Node2D" parent="Orbs"]

[node name="SpellC3" type="Panel" parent="Orbs/Spell3"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 261.0
margin/top = 413.0
margin/right = 408.0
margin/bottom = 600.0

[node name="Spell3" type="Button" parent="Orbs/Spell3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 273.0
margin/top = 522.0
margin/right = 398.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Spell3"
flat = false

[node name="Spell3T" type="Label" parent="Orbs/Spell3"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 323.0
margin/top = 466.0
margin/right = 353.0
margin/bottom = 494.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Usos" type="Label" parent="Orbs"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 272.0
margin/top = 420.0
margin/right = 376.0
margin/bottom = 436.0
text = "Usos restantes: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Explic" type="Node2D" parent="."]

[node name="ExplicP" type="Panel" parent="Explic"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 261.0
margin/top = 413.0
margin/right = 694.0
margin/bottom = 517.0

[node name="Explic" type="Label" parent="Explic"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 269.0
margin/top = 423.0
margin/right = 683.0
margin/bottom = 509.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Player/Move" to="." method="_on_Move_pressed"]

[connection signal="pressed" from="Player/Pass" to="." method="_on_Pass_pressed"]

[connection signal="pressed" from="Player/Orbs" to="." method="_on_Orbs_pressed"]

[connection signal="pressed" from="Player/Attack" to="." method="_on_Attack_pressed"]

[connection signal="mouse_enter" from="Orbs/Spell1/Spell1" to="." method="_on_Spell1_mouse_enter"]

[connection signal="mouse_exit" from="Orbs/Spell1/Spell1" to="." method="_on_Spell1_mouse_exit"]

[connection signal="pressed" from="Orbs/Spell1/Spell1" to="." method="_on_Spell1_pressed"]

[connection signal="mouse_enter" from="Orbs/Spell2/Spell2" to="." method="_on_Spell2_mouse_enter"]

[connection signal="mouse_exit" from="Orbs/Spell2/Spell2" to="." method="_on_Spell2_mouse_exit"]

[connection signal="pressed" from="Orbs/Spell2/Spell2" to="." method="_on_Spell2_pressed"]

[connection signal="mouse_enter" from="Orbs/Spell3/Spell3" to="." method="_on_Spell3_mouse_enter"]

[connection signal="mouse_exit" from="Orbs/Spell3/Spell3" to="." method="_on_Spell3_mouse_exit"]

[connection signal="pressed" from="Orbs/Spell3/Spell3" to="." method="_on_Spell3_pressed"]


